# multimodal_FEE

./: .gitignore  AGENTS.md  Makefile  PORTFOLIO.md  README.md  ROADMAP.md  RUNBOOK.md  TASK_MEMORY.md  VALIDATION.md  app.py  pyproject.toml
configs/: companies.yaml  document_sources.yaml  evaluation.yaml  extraction.yaml  graph.yaml  retrieval.yaml  validators.yaml
docs/: data_platform_framing.md  demo_script.md  failure_modes.md  interview_story.md  resume_bullets.md  sixty_second_pitch.md  system_design_notes.md
reports/: final_report.md  portfolio_report_manifest.json  resume_bullet.txt
scripts/: build_data_platform_artifacts.py  build_portfolio_report.py  build_portfolio_screenshots.py  smoke_adversarial_evaluation.py  smoke_case_studies.py  smoke_cli_workflow.py  smoke_data_platform_artifacts.py  smoke_deck_chart_extraction.py  smoke_demo_ui.py  smoke_embedding_backend.py  smoke_final_report_package.py  smoke_interview_packaging.py  smoke_llm_decomposition.py  smoke_narrative_causal.py  smoke_phase1_registry.py  smoke_phase2_extraction.py  smoke_phase3_normalization.py  smoke_phase4_evidence_graph.py  smoke_phase5_claim_verification.py  smoke_phase6_task_set.py  smoke_phase7_evaluation.py  smoke_phase8_memo.py  smoke_raw_corpus.py  smoke_real_retrieval_evaluation.py  smoke_streamlit_start.py  smoke_trace_reproducibility.py
tests/: test_adversarial_evaluation.py  test_case_studies.py  test_cli_workflow.py  test_data_platform_artifacts.py  test_deck_chart_extraction.py  test_demo_ui.py  test_embedding_backend.py  test_final_report_package.py  (+17 more)
(+95 files in other folders)
